# kd

./: .dockerignore  .gitignore  .kdconfig  Cargo.toml  Dockerfile  README.md  build.sh  run.sh  shell.sh
integration/: run-cram.sh  setup.sh  test-help.t  test-simple-subcommand.t  test-subcommand-arguments.t  test-subcommand-help.t  test-subdirectories.t
integration/fixtures/: basic-three-entry-kdconfig.json
scripts/: shell.sh
src/: kdconfig.rs  main.rs
