[package]
name = "kd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0" }
colored = { version = "2.0.0" }
itertools = { version = "0.10.5" }
json_comments = { version = "0.2.1" }
rand = { version = "0.8.5" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
shell-words = { version = "1.1.0" }
